# atividade-01-casa-da-peppa-SrPatsu21

./: CMakeLists.txt  README.md  docker-compose.yml  toolchain-mingw.cmake
docs/: SETUP.md
scripts/: build_all.sh  build_all_debug.sh  build_all_release.sh  build_linux.sh  build_linux_release.sh  build_windows.sh  build_windows_release.sh  install_vulkansdk_wine.sh
src/client/: hittable.h  hittable_list.h  main.cpp  sphere.h  triangle.h
